--- a/README.textile
+++ b/README.textile
@@ -14,11 +14,11 @@ You can install this via the command line with either `curl` or `wget`.
 
 h4. via `curl`
 
-@curl -L http://install.ohmyz.sh | sh@
+@curl -L https://github.com/z7z8th/oh-my-zsh/raw/master/tools/install.sh | sh@
 
 h4. via `wget`
 
-@wget --no-check-certificate http://install.ohmyz.sh -O - | sh@
+@wget --no-check-certificate https://github.com/z7z8th/oh-my-zsh/raw/master/tools/install.sh -O - | sh@
 
 h4. Optional: change the install directory
 
@@ -35,7 +35,7 @@ h3. The manual way
 
 1. Clone the repository
 
-  @git clone git://github.com/robbyrussell/oh-my-zsh.git ~/.oh-my-zsh@
+  @git clone git://github.com/z7z8th/oh-my-zsh.git ~/.oh-my-zsh@
 
 2. *OPTIONAL* Backup your existing ~/.zshrc file
 
